# yt-dlp-bot

./: .gitignore  Dockerfile  README.md  bot.json.default  build_docker.sh  debian.sources  ingest_files.py  main.py  pyproject.toml  requirements.txt  run_docker.sh
bot/: bot.py  database.py  helpers.py
bot/cogs/: ytdl.py
bot/downloader/: downloader.py
docs/: bot_commands.md  database_schema.md  project_structure.md
tests/: conftest.py  test_helpers.py
tests/cogs/: test_subscription.py  test_system.py  test_ytdl.py
tests/downloader/: test_downloader.py
tests/pikl_api/: test_waiting_room_client.py
tests/repositories/: test_download_repository.py  test_subscription_repository.py
tests/services/: test_download_manager.py  test_download_service.py  test_downloader.py  test_scheduler_service.py  test_subscription_service.py
yt_dlp_bot/: database.py  helpers.py  main.py  views.py
yt_dlp_bot/cogs/: subscription.py  sync.py  system.py  ytdl.py
yt_dlp_bot/downloader/: downloader.py
yt_dlp_bot/pikl_api/: http_client.py  waiting_room_client.py
yt_dlp_bot/repositories/: download_repository.py  subscription_repository.py
yt_dlp_bot/services/: download_manager.py  download_service.py  downloader.py  notification_service.py  scheduler_service.py  subscription_service.py
