[project]
name = "yt_dlp_bot"
version = "0.1.0"
description = "Discord bot to auto download youtube streams"
authors = [
 {name = "xchgeaxeax"}
]
requires-python = ">=3.13"

dependencies = [
 "discord.py >= 2.5.2",
 "requests ~= 2.32.3",
 "yt-dlp (>=2025.8.11)", 
 "pydantic ~= 2.11.3",
 "httpx ~= 0.28.1",
 "streamlink >= 7.5.0"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
